Next release
    o implemented samplerate conversion for all codecs using libsamplerate, 
	  and keeping internal aflibConverter as fallback,
          thanks to Sergiy <piratfm@gmail.com>
    o bugfix: fix for alsa driver - closes ticked #8
          thanks to Clemens Ladisch <clemens@ladisch.de> 
14-11-2009 Darkice 0.20.1 released
    o added rc.darkice init script
	  thanks to Niels Dettenbach <nd@syndicat.com>
    o bugfix: fix for gcc 4.4
	
05-11-2009 Darkice 0.20 released

    o new maintainer: Rafael Diniz <rafael@riseup.net>	
    o added AAC HEv2 encoding support (branch darkice-aacp merged) through 
	  libaacplus, http://tipok.org.ua/ru/node/17
	  thanks to tipok <piratfm@gmail.com> and others for the contribution.
    o bugfix: the configure script recognizes Ogg Vorbis shared objects
	  now, not just static libraries. Thanks to omroepvenray.
    o bugfix: enabling jack source compilation on Debian Lenny,
	  thanks to Alessandro Beretta <alessandro.baretta@radiomaria.org>

07-07-2008 Darkice 0.19 released

    o added mount point option for Darwin Streaming Server
      thanks to Pierre Souchay <pierre@souchay.net>
    o fix for some reliablity issues when using a Jack source
      thanks to Pierre Souchay <pierre@souchay.net>
    o enable easier finding of jack libraries on MacOS X,
      thanks to Daniel Hazelbaker <daniel@highdesertchurch.com>
    o added ability to specify name of jack device created by darkice,
      thanks to Alessandro Beretta <alessandro.baretta@radiomaria.org>

26-04-2007 DarkIce 0.18.1 released

    o enable real-time scheduling for non-super-users, if they have
      the proper operating system permissions,
      thanks to Jens Maurer <Jens.Maurer@gmx.net>
    o fix to enable compliation of the Serial ULAW code on MacOS X,
      thanks to Elod Horvath <elod@itfais.com>
    o fix to solve Shoutcast login failures, introduced in 0.18

05-03-2007 DarkIce 0.18 released

    o added serial ulaw input device support, thanks to